--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ fastjsonschema==2.16.2
 filelock==3.8.0
 Flask==2.2.2
 Flask-WTF==1.0.1
+gunicorn==20.1.0
 huggingface-hub==0.10.1
 idna==3.4
 ipykernel==6.16.0
